4 Experiments are added

--- a/midterm1sol0172.html
+++ b/midterm1sol0172.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+<h1><center> Global Daily News</center></h1>
+  
+    <p><center>Your Trusted Source for Latest Updates</center></p>
+    <hr>!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,10 +9,7 @@
   <title>Experiment 2</title>
 </head>
 <body>
-  <h1><center> Global Daily News</center></h1>
-  
-    <p><center>Your Trusted Source for Latest Updates</center></p>
-    <hr>
+  <
   <center>
     <a href = "https://www.bbc.com/news/world">World</a> |
   <a href = "https://www.bbc.com/sport">Sports</a> |
