--- a/exp1.html
+++ b/exp1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<--Create Web page for Course Curriculum: Use of headings, paragraphs, bold, italic, underline, and special characters, ordered list, unordered list, description list, nested list, and mixed lists--><!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -88,5 +88,6 @@
 
     </main>
 </body>
+
 
 </html>
