Refactor HTML structure for course curriculum

--- a/exp1.html
+++ b/exp1.html
@@ -1,4 +1,5 @@
-<--Create Web page for Course Curriculum: Use of headings, paragraphs, bold, italic, underline, and special characters, ordered list, unordered list, description list, nested list, and mixed lists--><!DOCTYPE html>
+<--Create Web page for Course Curriculum: Use of headings, paragraphs, bold, italic, underline, and special characters, ordered list, unordered list, description list, nested list, and mixed lists-->
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -91,3 +92,4 @@
 
 
 </html>
+
