Refactor exp2.html for clarity and structure
Removed old HTML comments and ensured proper structure.

--- a/exp2.html
+++ b/exp2.html
@@ -1,3 +1,4 @@
+<!--Create Web page for News Website with Embedded YouTube Video: Use of hyperlinks and navigation structure, insert multimedia in a webpage.-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -51,4 +52,5 @@
 </p>
 
 </body>
+
 </html>
