--- a/exp3.html
+++ b/exp3.html
@@ -1,3 +1,5 @@
+<!--Create Web page for College timetable: Use of tables with rowspan, colspan, headers, captions, and nested tables........-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -76,4 +78,5 @@
 
    </table>
 </body>
+
 </html>
