Refactor hotel room booking form HTML structure

--- a/exp4.html
+++ b/exp4.html
@@ -1,3 +1,5 @@
+<!--Create Web page for Hotel room booking form: Use of input fields, labels, select, textarea, and buttons. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -72,4 +74,5 @@
 
     </div>
 </body>
+
 </html>
