--- a/exp5.html
+++ b/exp5.html
@@ -1,3 +1,5 @@
+<!--Create Web page for Student Registration Form with Email Validation: Apply form attributes (method, action, placeholder, required). -->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -72,4 +74,5 @@
     <p align="center">&copy; 2025 Student Registration Portal</p>
 
 </body>
+
 </html>
