--- a/exp1.html
+++ b/exp1.html
@@ -1,4 +1,6 @@
-<!--Webpage for Course Curriculum: Use of headings, paragraphs, bold, italic, underline, and special characters, ordered list, unordered list, description list, nested list, and mixed lists--> 
+<!--Webpage for Course Curriculum: Use of headings, paragraphs, bold, italic, underline, 
+and special characters, ordered list, unordered list, description list, nested list, and mixed lists
+--> 
     
 <!DOCTYPE html>
 <html lang="en">
