--- a/exp2.html
+++ b/exp2.html
@@ -1,5 +1,6 @@
-<!--Create Web page for News Website with Embedded YouTube Video: Use of hyperlinks and navigation structure, insert multimedia in a webpage.-->
-
+<!--Create Web page for News Website with Embedded YouTube Video:
+ Use of hyperlinks and navigation structure, insert multimedia in a webpage
+ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -54,4 +55,3 @@
 
 </body>
 </html>
-
