--- a/exp3.html
+++ b/exp3.html
@@ -1,5 +1,6 @@
-<!--Create Web page for College timetable: Use of tables with rowspan, colspan, headers, captions, and nested tables........-->
-
+<!--Create Web page for College timetable: 
+Use of tables with rowspan, colspan, headers, captions, and nested tables.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -78,5 +79,4 @@
 
    </table>
 </body>
-
 </html>
