--- a/exp4.html
+++ b/exp4.html
@@ -1,6 +1,7 @@
-<!--Create Web page for Hotel room booking form: Use of input fields, labels, select, textarea, and buttons. -->
-
-<!DOCTYPE html>
+<!--Create Web page for Hotel room booking form:
+ Use of input fields, labels, select, textarea, and buttons.
+ -->
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -74,5 +75,4 @@
 
     </div>
 </body>
-
 </html>
