1st exp reuploaded

--- a/exp1.html
+++ b/exp1.html
@@ -1,36 +1,35 @@
+<!--Webpage for Course Curriculum: Use of headings, paragraphs, bold, italic, underline, 
+and special characters, ordered list, unordered list, description list, nested list, and mixed lists
+--> 
+    
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Course Curriculum</title>
 </head>
-
 <body>
     <header>
         <div>
-            <h1> Introduction</h1>
-            <p>Wlcome to the <big>Course Curriculum.</big> this page demonstrates the use of <i>HTML</i>. </p>
+            <h1>Introduction</h1>
+            <p>Welcome to the <strong>Course Curriculum.</strong> This page demonstrates the use of <em>HTML</em>, including the use of <u>underline</u> text.</p>
         </div>
     </header>
-
     <main>
-
         <div>
-            <h2> Semester 1 Subjects (Ordered list)</h2>
+            <h2>Semester 1 Subjects (Ordered list)</h2>
             <ol type="1">
                 <li>Applied Physics</li>
-                <li>Electical </li>
-                <li>Enginnering Maths</li>
+                <li>Electrical Engineering</li>
+                <li>Engineering Maths</li>
                 <li>DSA with C++</li>
-                <li>HTML web developement</li>
-                <li>Enviromental</li>
-                <li>Essential of AI</li>
+                <li>HTML web development</li>
+                <li>Environmental Studies</li>
+                <li>Essentials of AI</li>
             </ol>
         </div>
         <div>
-
             <h2>Programming languages (Unordered list)</h2>
             <ul>
                 <li>HTML</li>
@@ -39,14 +38,14 @@
             </ul>
         </div>
         <div>
-            <h2>Course Description (Descpritive List)</h2>
+            <h2>Course Description (Descriptive List)</h2>
             <dl>
-                <dt><b> C++ Programming</b></dt>
-                <dd>Learn baisc C++ language and solving DSA problems</dd>
+                <dt><strong>C++ Programming</strong></dt>
+                <dd>Learn basic C++ language and solving DSA problems</dd>
             </dl>
             <dl>
-                <dt><b>HTML</b></dt>
-                <dd>Introduction of html and building baisc website </dd>
+                <dt><strong>HTML</strong></dt>
+                <dd>Introduction of html and building basic website</dd>
             </dl>
         </div>
         <div>
@@ -54,14 +53,13 @@
             <ol type="1">
                 <li>Module 1: Basic
                     <ul>
-                        <li>Interoduction</li>
+                        <li>Introduction</li>
                         <li>History of Computers</li>
                     </ul>
                 </li>
-                <li>
-                    Module 2: Programming
+                <li>Module 2: Programming
                     <ul>
-                        <li>Variable and Data</li>
+                        <li>Variable and Data Types</li>
                         <li>Control Statements</li>
                     </ul>
                 </li>
@@ -70,7 +68,7 @@
         <div>
             <h2>Project Work (Nested List)</h2>
             <ul>
-                <li>Web Developement
+                <li>Web Development
                     <ol type="i">
                         <li>HTML</li>
                         <li>CSS</li>
@@ -85,8 +83,6 @@
                 </li>
             </ul>
         </div>
-
     </main>
 </body>
-
 </html>
