--- a/exp4.html
+++ b/exp4.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+<!--Create Web page for Hotel room booking form:
+ Use of input fields, labels, select, textarea, and buttons.
+ -->
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
