--- a/MidSem1soln0172.html
+++ b/MidSem1soln0172.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Experiment 2</title>
+  <title>Mid - sem 1</title>
 </head>
 <body>
   <h1><center> Global Daily News</center></h1>
