--- a/exp2.html
+++ b/exp2.html
@@ -1,5 +1,5 @@
 <!--Create Web page for News Website with Embedded YouTube Video:
- Use of hyperlinks and navigation structure, insert multimedia in a webpage
+ Use of hyperlink and navigation structure, insert multimedia in a webpage
  -->
 <!DOCTYPE html>
 <html lang="en">
