--- a/exp3.html
+++ b/exp3.html
@@ -1,5 +1,5 @@
 <!--Create Web page for College timetable: 
-Use of tables with rowspan, colspan, headers, captions, and nested tables.
+Use of tables with rowspan, colspan, headers, caption, and nested tables.
 -->
 <!DOCTYPE html>
 <html lang="en">
