--- a/exp4.html
+++ b/exp4.html
@@ -1,5 +1,5 @@
 <!--Create Web page for Hotel room booking form:
- Use of input fields, labels, select, textarea, and buttons.
+ Use of input field, labels, select, textarea, and buttons.
  -->
  <!DOCTYPE html>
 <html lang="en">
