modified the portfolio

--- a/My Portfolio Project/index.html
+++ b/My Portfolio Project/index.html
@@ -30,7 +30,7 @@
             <a href="#contact" class="btn">Hire Me</a>
         </div>
         <div class="hero-img">
-            <img src="ishika1.jpeg" alt="Profile Image">
+            <img src="photo.jpeg" alt="Profile Image">
         </div>
     </section>
 
@@ -86,7 +86,7 @@
             <input type="email" id="email" required>
 
             <label for="message">Message</label>
-            <textarea id="message" rows="4" required></textarea>
+            <textarea id="message" rows="6" required></textarea>
 
             <button type="submit" class="btn">Send Message</button>
         </form>
